--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="sv">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,27 @@
     <title>Document</title>
     <script src="js/main.js" type="module"></script>
 </head>
+
 <body>
-    <h1>Välkommen!!</h1>
+    <header>
+        <picture>
+            
+        </picture>
+        <nav>
+            <ul>
+                <li><a href="index.html">Hem</a></li>
+                <li><a href="images.html">Bilder</a></li>
+                <li><a href="process.html">Processen</a></li>
+            </ul>
+        </nav>
+
+    </header>
+    <main>
+        <h1>Välkommen</h1>
+    </main>
+    <footer>
+        <p>Copyright &copy; 2024 Jonas Ståleker</p>
+    </footer>
 </body>
+
 </html>
