--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <picture>
-            
+
         </picture>
         <nav>
             <ul>
@@ -24,7 +24,7 @@
 
     </header>
     <main>
-        <h1>Välkommen</h1>
+        <h1>Välkommen!</h1>
     </main>
     <footer>
         <p>Copyright &copy; 2024 Jonas Ståleker</p>
