--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,7 @@
 
 <body>
     <header>
-        <picture>
-
-        </picture>
+        <h1>Automatisering av Parcel</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Hem</a></li>
@@ -25,6 +23,9 @@
     </header>
     <main>
         <h1>Välkommen!</h1>
+        <p>Detta moment handlar om att automatisera arbetsprocessen för webbutveckling med verktygen NodeJS och Parcel.
+            Du kommer också lära dig mer om automatisk publicering mot molntjänster.</p>
+        <p>Denna sida är en uppgift för kurs DT211G - Frontend-baserad webbutveckling på Mittuniversitetet</p>
     </main>
     <footer>
         <p>Copyright &copy; 2024 Jonas Ståleker</p>
