--- a/src/index.html
+++ b/src/index.html
@@ -10,26 +10,48 @@
 </head>
 
 <body>
-    <header>
-        <h1>Automatisering av Parcel</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Hem</a></li>
-                <li><a href="images.html">Bilder</a></li>
-                <li><a href="process.html">Processen</a></li>
-            </ul>
-        </nav>
-
-    </header>
-    <main>
-        <h1>Välkommen!</h1>
-        <p>Detta moment handlar om att automatisera arbetsprocessen för webbutveckling med verktygen NodeJS och Parcel.
-            Du kommer också lära dig mer om automatisk publicering mot molntjänster.</p>
-        <p>Denna sida är en uppgift för kurs DT211G - Frontend-baserad webbutveckling på Mittuniversitetet</p>
-    </main>
-    <footer>
-        <p>Copyright &copy; 2024 Jonas Ståleker</p>
-    </footer>
+    <div id="page-container">
+        <div id="content-wrap">
+            <header>
+                <h1>Automatisering av Parcel</h1>
+                <!-- Menyknapp för att öppna mobilmenyn-->
+                <button class="menu-btn open" id="open-menu">
+                    <span class="menu-icon">
+                        <span class="bars"></span>
+                        <span class="bars"></span>
+                        <span class="bars"></span>
+                    </span>
+                    <span class="menu-text">Meny</span>
+                </button>
+                <!-- navigering -->
+                <nav id="nav-menu">
+                    <!-- Knapp som visas om mobilmenyn är utfälld-->
+                    <button class="menu-btn close" id="close-menu">
+                        <span class="menu-icon">
+                            <span class="bars cross1"></span>
+                            <span class="bars cross2"></span>
+                        </span>
+                        <span class="menu-text">Stäng meny</span>
+                    </button>
+                    <ul>
+                        <li><a href="index.html" class="current">Hem</a></li>
+                        <li><a href="images.html">Bilder</a></li>
+                        <li><a href="process.html">Processen</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <main>
+                <h1>Välkommen!</h1>
+                <p>Detta moment handlar om att automatisera arbetsprocessen för webbutveckling med verktygen NodeJS och
+                    Parcel.
+                    Du kommer också lära dig mer om automatisk publicering mot molntjänster.</p>
+                <p>Denna sida är en uppgift för kurs DT211G - Frontend-baserad webbutveckling på Mittuniversitetet</p>
+            </main>
+        </div>
+        <footer>
+            <p>Copyright &copy; 2024 Jonas Ståleker</p>
+        </footer>
+    </div>
 </body>
 
 </html>
