--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/main.css">
     <title>Document</title>
     <script src="js/main.js" type="module"></script>
+   <script src="js/clock.js" defer></script>
 </head>
 
 <body>
@@ -46,6 +47,7 @@
                     Parcel.
                     Du kommer också lära dig mer om automatisk publicering mot molntjänster.</p>
                 <p>Denna sida är en uppgift för kurs DT211G - Frontend-baserad webbutveckling på Mittuniversitetet</p>
+                <div id="clock"><p></p></div>
             </main>
         </div>
         <footer>
