add favicon and fix mobile responsitivity

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
-    <title>Document</title>
+    <title>Jonas Ståleker - Automatisering</title>
     <script src="js/main.js" type="module"></script>
-   <script src="js/clock.js" defer></script>
+    <script src="js/clock.js" defer></script>
 </head>
 
 <body>
@@ -47,7 +47,9 @@
                     Parcel.
                     Du kommer också lära dig mer om automatisk publicering mot molntjänster.</p>
                 <p>Denna sida är en uppgift för kurs DT211G - Frontend-baserad webbutveckling på Mittuniversitetet</p>
-                <div id="clock"><p></p></div>
+                <div id="clock">
+                    <p></p>
+                </div>
             </main>
         </div>
         <footer>
