--- a/src/process.html
+++ b/src/process.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/main.css">
     <title>Processen</title>
     <script src="js/main.js" type="module"></script>
-    <script src="js/clock.js" defer></script>
+    <script src="js/clock.js" type="module"></script>
 </head>
 
 <body>
