--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/main.css">
     <title>Jonas Ståleker - Automatisering</title>
     <script src="js/main.js" type="module"></script>
-    <script src="js/clock.js" defer></script>
+    <script src="js/clock.js" type="module"></script>
 </head>
 
 <body>
