--- a/src/process.html
+++ b/src/process.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <title>Processen</title>
     <script src="js/main.js" type="module"></script>
     <script src="js/clock.js" type="module"></script>
@@ -59,7 +60,7 @@
                         min hemsida installerades Sharp som automatiskt optimerar bilderna med filtyp, storlek och
                         kvalitet. Med hjälp av koden <em>"browserslist": "> 0.5%, last 2 versions, not dead"</em> gör
                         jag också mitt projekt bakåtkompatibelt för att den ska fungera i så många webbläsare som
-                        möjligt. Jag tog bort <em>defer</em> på mina js-länkar i html-koden och la till <em>type="module</em> för att de skulle bli konkatinerade.</p>
+                        möjligt. Jag tog bort <em>defer</em> på mina js-länkar i html-koden och la till <em>type="module</em> för att de skulle bli transpilerade.</p>
                     <h2>Versionshantering</h2>
                     <p>I mitt projekt skapar jag en mapp som jag döper till <em>src</em> där själva hemsidan byggs och
                         som skiljer sig från <em>dist</em> som skapas automatiskt när filerna minifierats för
