--- a/src/images.html
+++ b/src/images.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <title>Bilder</title>
     <script src="js/main.js" type="module"></script>
     <script src="js/clock.js" type="module"></script>
